# byte-parser

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: expect_byte.rs  ignore_byte.rs  lib.rs  parse_iter.rs  parse_iterator.rs  pit.rs  position.rs  recorder.rs  split_on_byte.rs  stop.rs  while_byte_fn.rs
