[package]
name = "byte-parser"
description = "Parse a str or a slice with a function style"
version = "0.2.0"
authors = ["Sören Meier <soeren@s-me.ch>"]
repository = "https://github.com/soerenmeier/byte-parser"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["parser", "parsing"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
